--- a/_posts/20230924.md
+++ b/_posts/20230924.md
@@ -28,13 +28,15 @@ As a result, I decided to apply for a coding bootcamp, specifically the AppWorks
 
 ### 🧳 During AppWorks School
 
-(1) From 0 to 1: Starting from scratch and learning on our own, as frontend developers, we began with the basics of HTML, CSS, and JavaScript ES6 before delving into ReactJS. These subjects weren't taught through traditional lectures; instead, we tackled them through daily and weekly problem-solving tasks. It was up to us to seek out solutions and implement them using documentation, tutorials, and assistance from our fellow classmates.
+(1) **From 0 to 1**: Starting from scratch and learning on our own, as frontend developers, we began with the basics of HTML, CSS, and JavaScript ES6 before delving into ReactJS. These subjects weren't taught through traditional lectures; instead, we tackled them through daily and weekly problem-solving tasks. It was up to us to seek out solutions and implement them using documentation, tutorials, and assistance from our fellow classmates.
 
 Personally, I discovered that I learn more efficiently through video tutorials rather than documentation. As a result, I predominantly relied on YouTube channels and Udemy courses to acquire the skills needed to implement features like sliders and state management (reducer, Redux).
 
 Some recommendation of channels and courses I have subscribed:
 
-📎 _[developedbyedl](https://www.youtube.com/@developedbyed)_, _[Jack Herrington](https://www.youtube.com/@jherr)_
+📎 _[developedbyedl](https://www.youtube.com/@developedbyed)_
+
+📎 _[Jack Herrington](https://www.youtube.com/@jherr)_
 
 📎 _[Ben Awad](https://www.youtube.com/@bawad)_
 
