add calendly into the blog

--- a/_posts/20230924.md
+++ b/_posts/20230924.md
@@ -54,7 +54,11 @@ Some recommendation of channels and courses I have subscribed:
 
 ## 🌲 I am glad that I planted the tree. 🌲
 
-Maybe you are also hesitate to plant the tree or not, feel free to ask me! For those who might be interested:
+Maybe you are also hesitate to plant the tree or not, feel free to ask me!
+
+📅 Calendly: _[Book a meeting!](https://calendly.com/peichincc/30min)_
+
+For those who might be interested:
 
 ✨ Application of AppWorks School: _[AppWorks School](https://school.appworks.tw/)_
 
