--- a/_posts/20240618.md
+++ b/_posts/20240618.md
@@ -1,5 +1,5 @@
 ---
-title: "Breaking into Engineering: My Journey as a Junior Developer"
+title: "Breaking into Engineering: Journey as a Junior Developer"
 excerpt: "In May 2023, I had the opportunity to interview with Catawiki, a leading online auction platform. At that time, Catawiki did not have any junior developers on board. Fast forward to May 2024, and the landscape has significantly changed. Now, there are more junior developers, including myself, each bringing unique backgrounds and experiences. This shift highlights the growing importance of nurturing new talent in the tech industry. Here’s my story of breaking into engineering, navigating my journey as a junior, and how I ended up here at Catawiki."
 coverImage: "/assets/photo/meetup.jpg"
 date: "2024-06-18T05:35:07.322Z"
@@ -12,15 +12,15 @@ ogImage:
 
 _This article content is based on the sharing in the “Breaking into Engineering” meetup at Catawiki HQ on 30 May 2024._
 
-In May 2023, I had the opportunity to interview with Catawiki, a leading online auction platform. At that time, Catawiki did not have any junior developers on board. Fast forward to May 2024, and the landscape has significantly changed. Now, there are more junior developers, including myself, each bringing unique backgrounds and experiences. This shift highlights the growing importance of nurturing new talent in the tech industry. Here’s my story of breaking into engineering, navigating my journey as a junior, and how I ended up here at Catawiki.
+👩‍💻 In May 2023, I had the opportunity to interview with Catawiki, a leading online auction platform. At that time, Catawiki did not have any junior developers on board. Fast forward to May 2024, and the landscape has significantly changed. Now, there are more junior developers, including myself, each bringing unique backgrounds and experiences. This shift highlights the growing importance of nurturing new talent in the tech industry. Here’s my story of breaking into engineering, navigating my journey as a junior, and how I ended up here at Catawiki.
 
 ### My Path to Engineering
 
-**When?**
+**💭 When?**
 
 To set the timeline, my academic background is quite diverse. I hold a Bachelor's degree in Chemistry, and I have earned two Master’s degrees—one in Science and another in Business Administration. This eclectic mix of education might not seem like the typical path to a career in software engineering, but it has provided me with a broad perspective and a versatile skill set.
 
-**What?**
+**🧠 What?**
 
 My transition into the tech world began with a focused effort on honing my coding skills. After graduating from the boot camp, I started my first developer job and prepared for my transition from Taiwan to a broader market, which is the Netherlands. Here are some of the key steps I took:
 
@@ -28,7 +28,7 @@ My transition into the tech world began with a focused effort on honing my codin
 - **Interview Preparation:** I watched numerous interview mock videos, especially those that explain web development concepts. This helped me understand what interviewers look for and how to articulate my thoughts clearly.
 - **Experience and Projects:** I meticulously listed down my work experiences and projects. During interviews, I shared these insights to demonstrate my practical knowledge and hands-on experience.
 
-**How?**
+**📋 How?**
 
 My journey to securing a position at Catawiki involved a multi-stage interview process:
 
@@ -37,7 +37,7 @@ My journey to securing a position at Catawiki involved a multi-stage interview p
 
 ### Networking and Integration
 
-**Landed in the Netherlands**
+**🇳🇱 Landed in the Netherlands**
 
 Once I landed in the Netherlands, networking became a crucial part of my integration into the tech community. Here are some strategies that worked for me:
 
@@ -50,7 +50,7 @@ Once I landed in the Netherlands, networking became a crucial part of my integra
 
 ### Continuous Learning and Growth
 
-**Day-to-Day Life as a Junior Developer**
+**⭐ Day-to-Day Life as a Junior Developer**
 
 Working as a junior developer comes with its own set of challenges and learning opportunities. Here are some principles I live by:
 
