--- a/_posts/20240618.md
+++ b/_posts/20240618.md
@@ -7,7 +7,7 @@ author:
   name: Penny Chiang
   picture: "/assets/blog/authors/penny.jpg"
 ogImage:
-  url: "/assets/photo/school.jpg"
+  url: "/assets/photo/meetup.jpg"
 ---
 
 _This article content is based on the sharing in the “Breaking into Engineering” meetup at Catawiki HQ on 30 May 2024._
